@@ -571,6 +571,10 @@ read_options (void)
   opt.prefer_html = val == NULL || *val != '1'? 0 : 1;
   xfree (val); val = NULL;
 
+  load_extension_value ("svnRevision", &val);
+  opt.svn_revision = val? atol (val) : 0;
+  xfree (val); val = NULL;
+
   /* Note, that on purpose these flags are only Registry changeable.
      The format of the entry is a string of of "0" and "1" digits; see
      the switch below for a description. */
@@ -643,6 +647,7 @@ write_options (void)
     {"defaultKey",               2, 0, opt.default_key},
     {"enableDefaultKey",         0, opt.enable_default_key},
     {"preferHtml",               0, opt.prefer_html},
+    {"svnRevision",              1, opt.svn_revision},
     {NULL, 0}
   };
   char buf[32];
